<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) 2020, 2022, Oracle and/or its affiliates.

  This software is dual-licensed to you under the Universal Permissive License 
  (UPL) 1.0 as shown at https://oss.oracle.com/licenses/upl or Apache License
  2.0 as shown at http://www.apache.org/licenses/LICENSE-2.0. You may choose
  either license.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     https://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.oracle.database.r2dbc</groupId>
  <artifactId>oracle-r2dbc</artifactId>
  <version>1.2.0</version>
  <name>oracle-r2dbc</name>
  <description>
    Oracle R2DBC Driver implementing version 1.0.0 of the R2DBC SPI for Oracle Database.
  </description>
  <url>
    https://github.com/oracle/oracle-r2dbc
  </url>
  <inceptionYear>2019</inceptionYear>
  <licenses>
    <license>
      <name>Universal Permissive License v1.0</name>
      <url>https://opensource.org/licenses/UPL</url>
    </license>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <organization>Oracle America, Inc.</organization>
      <organizationUrl>http://www.oracle.com</organizationUrl>
    </developer>
  </developers>
  <scm>
    <url>https://github.com/oracle/oracle-r2dbc.git</url>
    <connection>
      scm:git:https://github.com/oracle/oracle-r2dbc.git
    </connection>
    <developerConnection>scm:git:git@github.com:oracle/oracle-r2dbc.git</developerConnection>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/oracle/oracle-r2dbc/issues</url>
  </issueManagement>

  <properties>
    <java.version>11</java.version>
    <ojdbc.version>21.11.0.0</ojdbc.version>
    <r2dbc.version>1.0.0.RELEASE</r2dbc.version>
    <reactor.version>3.5.11</reactor.version>
    <reactive-streams.version>1.0.3</reactive-streams.version>
    <junit.version>5.9.1</junit.version>
    <spring-jdbc.version>5.3.19</spring-jdbc.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgs>
            <arg>-Xlint:all</arg>
            <arg>-Xlint:-options</arg>
            <arg>-Xlint:-processing</arg>
            <arg>-Xlint:-serial</arg>
            <!-- LDAP URL tests require the java.naming module -->
            <testCompilerArgument>--add-modules</testCompilerArgument>
            <testCompilerArgument>java.naming</testCompilerArgument>
          </compilerArgs>
          <showWarnings>true</showWarnings>
          <release>${java.version}</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Implementation-Title>Oracle R2DBC</Implementation-Title>
              <Implementation-Version>
                ${project.version}
              </Implementation-Version>
              <Implementation-Vendor>Oracle Corporation</Implementation-Vendor>
              <Specification-Title>
                R2DBC - Reactive Relational Database Connectivity
              </Specification-Title>
              <Specification-Version>${r2dbc.version}</Specification-Version>
              <Specification-Vendor>
                Pivotal Software, Inc
              </Specification-Vendor>
              <Build-Info>
                Oracle R2DBC ${project.version} compiled with JDK ${java.vm.version} from ${java.vm.vendor} on ${maven.build.timestamp}
              </Build-Info>
              <Main-Class>
                oracle.r2dbc.impl.Main
              </Main-Class>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>3.0.0-M1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>3.0.0-M1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.1.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <!-- Include tests in the oracle.r2dbc.test package -->
          <includes>
            <include>**/*Test.java</include>
            <include>**/*TestKit.java</include>
          </includes>
          <!-- LDAP URL tests require the java.naming module -->
          <argLine>--add-reads com.oracle.database.r2dbc=java.naming</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <header>Oracle R2DBC ${project.version}</header>
          <footer>
            Copyright (c) 2020, 2022, Oracle and/or its affiliates.
          </footer>
          <show>package</show>
          <!--
            If sourcepath is not configured, then docs are only generated for
            the oracle.r2dbc package, and not for the oracle.r2dbc.impl package.
            The author of this comment could not find any explaination for this
            in the documentation of the Maven JavaDoc plugin.
          -->
          <sourcepath>src/main/java</sourcepath>
          <links>
            <link>https://r2dbc.io/spec/${r2dbc.version}/api/</link>
            <link>https://www.reactive-streams.org/reactive-streams-1.0.3-javadoc/</link>
            <link>https://docs.oracle.com/en/database/oracle/oracle-database/21/jajdb/</link>
          </links>
          <tags>
            <tag>
              <name>implNote</name>
              <placement>a</placement>
              <head>Implementation Note:</head>
            </tag>
            <tag>
              <name>implSpec</name>
              <placement>a</placement>
              <head>Implementation Requirements:</head>
            </tag>
          </tags>
        </configuration>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>${project.basedir}</directory>
        <includes>
          <include>NOTICE.txt</include>
          <include>LICENSE.txt</include>
          <include>THIRD_PARTY_LICENSES.txt</include>
        </includes>
        <targetPath>META-INF</targetPath>
      </resource>
      <resource>
        <directory>${project.basedir}/src/main/resources/META-INF/services/</directory>
        <includes>
          <include>io.r2dbc.spi.ConnectionFactoryProvider</include>
        </includes>
        <targetPath>META-INF/services/</targetPath>
      </resource>
    </resources>
  </build>


  <dependencies>
    <!-- Oracle R2DBC Driver Dependencies -->
    <dependency>
      <groupId>io.r2dbc</groupId>
      <artifactId>r2dbc-spi</artifactId>
      <version>${r2dbc.version}</version>
    </dependency>
    <dependency>
      <groupId>com.oracle.database.jdbc</groupId>
      <artifactId>ojdbc11</artifactId>
      <version>${ojdbc.version}</version>
    </dependency>
    <dependency>
      <groupId>io.projectreactor</groupId>
      <artifactId>reactor-core</artifactId>
      <version>${reactor.version}</version>
    </dependency>
    <dependency>
      <groupId>org.reactivestreams</groupId>
      <artifactId>reactive-streams</artifactId>
      <version>${reactive-streams.version}</version>
    </dependency>

    <!-- Oracle R2DBC Test Code Dependencies -->
    <dependency>
      <groupId>io.r2dbc</groupId>
      <artifactId>r2dbc-spi-test</artifactId>
      <version>${r2dbc.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jdbc</artifactId>
      <version>${spring-jdbc.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>publication</id>
      <activation>
        <property>
          <name>release</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
                <configuration>
                  <attach>true</attach>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
                <configuration>
                  <attach>true</attach>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>

<!--

   MODIFIED   (MM/DD/YY)
   harayuanwang  03/10/20 - Creation

-->
